--- a/bhs40-v2/index.html
+++ b/bhs40-v2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>BHS 40 — Todos Santos, Feb 2026</title>
+  <title>Todos or Nothing — Todos Santos, Feb 2026</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -956,7 +956,7 @@
   <div id="hero-content">
     <div id="hero-eyebrow">Feb 26 – Mar 1, 2026 &nbsp;·&nbsp; Todos Santos, Baja</div>
     <h1 id="hero-title">
-      SOUTH<span>OF</span>FORTY.
+      TODOS<span>OR</span>NOTHING.
     </h1>
     <p id="hero-tagline">Ten couples. One villa. No excuses.</p>
     <div id="hero-meta">
@@ -1164,7 +1164,7 @@
         loading="lazy"
         allowfullscreen
         referrerpolicy="no-referrer-when-downgrade"
-        src="https://maps.google.com/maps?q=23.4925673,-110.2775241&z=15&output=embed">
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3596.123!2d-110.280099!3d23.4925673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86af00fea6459205%3A0x133c7578e7c432b8!2sHotel%20Villa%20Santa%20Cruz!5e0!3m2!1sen!2sus!4v1">
       </iframe>
     </div>
   </div>
@@ -1470,7 +1470,7 @@
   <div id="footer-bg"></div>
   <div id="footer-teal"></div>
   <div class="footer-logo">BHS 40</div>
-  <div class="footer-tagline">South of Forty. Todos Santos, Baja California Sur.</div>
+  <div class="footer-tagline">Todos or Nothing. Todos Santos, Baja California Sur.</div>
   <hr class="footer-divider" />
   <div class="footer-meta">
     <div class="footer-copy">Private — not for public sharing</div>
