Add BHS 40 to index page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <li><a href="/quicksites/costanoa-feb26/">Costanoa — Feb 2026</a></li>
     <li><a href="/quicksites/costanoa-invite/">Costanoa Trip (old)</a></li>
     <li><a href="/quicksites/gigi-guide/">Gigi's Guide — Charlie & Mac</a></li>
+    <li><a href="/quicksites/bhs40/">Todos or Nothing — BHS 40</a></li>
   </ul>
 </body>
 </html>
